--- a/content/docs/02.installation/05.kubernetes-gcp-gke.md
+++ b/content/docs/02.installation/05.kubernetes-gcp-gke.md
@@ -6,13 +6,16 @@ icon: /docs/icons/gcp-gke.svg
 Deploy Kestra to GCP GKE with CloudSQL as a database backend and Google Cloud Storage as internal storage backend.
 
 ## Overview
+
 This guide provides detailed instructions for deploying Kestra to Google Kubernetes Engine (GKE) with CloudSQL as database backend, and Google Cloud Storage(GCS) for internal storage.
 
 **Prerequisites:**
+
 - Basic command line interface skills
 - Familiarity with GCP GKE, PostgreSQL, GCS, and Kubernetes
 
 ## Launch an GKE Cluster
+
 First, login to GCP using `gcloud init`.
 
 Run the following command to create an GKE cluster named `my-kestra-cluster`:
@@ -33,9 +36,11 @@ gke-gcloud-auth-plugin --version
 If the output displays version information, skip the next section.
 
 You can install the authentication plugin using:
+
 ```shell
 gcloud components install gke-gcloud-auth-plugin
 ```
+
 ::
 
 Run the following command to have your kubecontext point to the newly created cluster:
@@ -50,7 +55,7 @@ You can now confirm that your kubecontext points to the GKE cluster using:
 kubectl get svc
 ```
 
-## Install Kestra on GCP GKE
+## Install Kestra on GCP GKE (optional)
 
 Add the Kestra Helm chart repository and install Kestra:
 
@@ -64,13 +69,13 @@ helm install my-kestra kestra/kestra
 If you are using Google Cloud Workload Identity, you can annotate your Kubernetes service account in the Helm chart configuration. This allows Kestra to automatically use the associated GCP service account for authentication.
 
 To configure this, you can add the following to your "values.yaml" file:
+
 ```yaml
 serviceAccount:
   create: true
   name: <your-service-account-name>
   annotations:
     iam.gke.io/gcp-service-account: "<gcp-service-account>@<gcp-project-id>.iam.gserviceaccount.com"
-
 ```
 
 Alternatively, you can apply the annotation directly when you install Kestra using Helm:
@@ -145,6 +150,7 @@ configuration:
 ```
 
 Also, disable the PostgreSQL pod by changing `enabled` value in the `postgresql` section from `true` to `false` in the same file.
+
 ```yaml
 postgresql:
   enabled: false
@@ -171,7 +177,7 @@ By default, Minio pod is being used as storage backend, and internal storage is 
 9. Edit Kestra storage configuration in the [Helm chart's values](https://github.com/kestra-io/helm-charts/blob/master/charts/kestra/values.yaml#L11).
 
 ::alert{type="info"}
-*Note: If you want to use a Kubernetes service account configured as a workload identify, you don't need to provide anything for `serviceAccount` as it will be autodetected for the pod configuration if it's well configured.*
+_Note: If you want to use a Kubernetes service account configured as a workload identify, you don't need to provide anything for `serviceAccount` as it will be autodetected for the pod configuration if it's well configured._
 ::
 
 ```yaml
@@ -187,6 +193,7 @@ configuration:
 ```
 
 Disable the Minio pod by changing `enabled` value in the minio section from `true` to `false` in the same file.
+
 ```yaml
 minio:
   enabled: false
@@ -215,6 +222,7 @@ tasks:
 ```
 
 ## Commented-out Examples in values.yaml
+
 To provide users with clear guidance on configuring the values.yaml file, we have included some commented-out examples in the configuration. These examples can be used to set up various aspects of Kestra, such as secrets, database configurations, and other key parameters. You can uncomment and modify them as needed.
 
 Here’s an example of how you can define secrets and other configurations in the values.yaml file:
@@ -259,8 +267,7 @@ In this example:
 -**Secrets**: You can configure sensitive values as secrets, either hardcoding them or referencing existing Kubernetes secrets.  
 -**Queue and Repository**: By default, these can use PostgreSQL or any other supported type. Uncomment the relevant lines to use them.  
 -**PostgreSQL Configuration**: Set the datasources section to provide details for connecting to a PostgreSQL database.  
--**Disabling Services**: If you're using external services like CloudSQL or Google Cloud Storage, you can disable the built-in services (MinIO and PostgreSQL).  
-
+-**Disabling Services**: If you're using external services like CloudSQL or Google Cloud Storage, you can disable the built-in services (MinIO and PostgreSQL).
 
 Feel free to uncomment and modify these examples based on your setup needs. This provides flexibility while keeping your values.yaml well-structured.
 
